fix news list bug on smaller devices

--- a/src/components/Banner/styles/Banner.module.scss
+++ b/src/components/Banner/styles/Banner.module.scss
@@ -23,7 +23,7 @@
       font-family: Poppins;
       font-weight: 800;
 
-      @media all and (min-width: 1024px) {
+      @media all and (min-width: 768px) {
         display: block;
         font-size: 3rem;
         margin: 30px auto 30px;
