--- a/src/components/NewsList/styles/NewsList.module.scss
+++ b/src/components/NewsList/styles/NewsList.module.scss
@@ -35,8 +35,8 @@
 
   .card {
     display: flex;
-    width: 350px;
-    height: 180px;
+    width: 280px;
+    height: 150px;
     border-radius: 10px;
     background-color: #7e9afd;
     border: 1px solid #3f68ff;
